--- a/client/src/locales/zh/common.json
+++ b/client/src/locales/zh/common.json
@@ -64,5 +64,10 @@
     "fri": "星期五",
     "sat": "星期六",
     "sun": "星期日"
-  }
+  },
+  "infoPanel": {
+    "msg": "按下右上角的按鈕 <新增員工>. 點選任何一個員工做修改. 接下來點選左邊的 <班名設定> 增加固定班. 最後到 <班表> 完成排班.",
+    "title": "公司員工"
+  },
+  "contactInformation": "聯絡方法"
 }
