show tooltip on hover over conflicted shifts

--- a/client/src/locales/en/common.json
+++ b/client/src/locales/en/common.json
@@ -71,5 +71,6 @@
     "title": "Staffjoy Employees"
   },
   "contactInformation": "Contact Information",
-  "warning": "Warning"
+  "warning": "Warning",
+  "shiftConflict": "Warning! Multiple shifts assigned at the same time"
 }
