--- a/client/src/locales/zh/common.json
+++ b/client/src/locales/zh/common.json
@@ -71,5 +71,6 @@
     "title": "公司員工"
   },
   "contactInformation": "聯絡方法",
-  "warning": "警告"
+  "warning": "警告",
+  "shiftConflict": "警告! 排班時間重複"
 }
