add 40 hours warning to summary info

--- a/client/src/locales/en/common.json
+++ b/client/src/locales/en/common.json
@@ -72,5 +72,6 @@
   },
   "contactInformation": "Contact Information",
   "warning": "Warning",
-  "shiftConflict": "Warning! Multiple shifts assigned at the same time"
+  "shiftConflict": "Warning! Multiple shifts assigned at the same time",
+  "overScheduled": "Warning! Scheduled for more than 40 hours"
 }
